initial commit with updated gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.enigmartyr.intellijdioxusexpressionhighlighting
+pluginGroup = me.enigmartyr.ideh
 pluginName = intellij-dioxus-expression-highlighting
 pluginRepositoryUrl = https://github.com/enigmartyr/intellij-dioxus-expression-highlighting
 # SemVer format -> https://semver.org
